# crates/sdkwork-routes-webserver-app-api/src/http_route_manifest.rs
@@ -211,31 +211,7 @@ const HTTP_ROUTES: &[HttpRoute] = &[
         "/app/v3/api/domains",
         "domain",
         "domains.list",
-    )
-    .with_required_permission("web.certificates.read"),
-    HttpRoute::dual_token(
-        HttpMethod::Get,
-        "/app/v3/api/certificates",
-        "certificate",
-        "certificates.list",
-    )
-    .with_required_permission("web.certificates.read"),
-    HttpRoute::dual_token(
-        HttpMethod::Post,
-        "/app/v3/api/certificates/issue",
-        "certificate",
-        "certificates.issue",
-    )
-    .with_required_permission("web.certificates.write")
-    .with_idempotent(true)
-    .with_rate_limit_tier(RateLimitTier::AuthCritical),
-    HttpRoute::dual_token(
-        HttpMethod::Get,
-        "/app/v3/api/certificates/operations/{operationId}",
-        "certificate",
-        "certificates.operations.retrieve",
-    )
-    .with_required_permission("web.certificates.read"),
+    ),
     HttpRoute::dual_token(
         HttpMethod::Get,
         "/app/v3/api/sites/{siteId}/health_checks",
