# crates/sdkwork-routes-webserver-app-api/src/paths.rs
@@ -23,7 +23,4 @@ pub const SITE_DEPLOYMENT_ROLLBACK: &str =
 pub const SITE_ENV_VARIABLES: &str = "/app/v3/api/sites/{siteId}/env_variables";
 pub const SITE_ENV_VARIABLE: &str = "/app/v3/api/sites/{siteId}/env_variables/{variableId}";
 pub const DOMAINS: &str = "/app/v3/api/domains";
-pub const CERTIFICATES: &str = "/app/v3/api/certificates";
-pub const CERTIFICATES_ISSUE: &str = "/app/v3/api/certificates/issue";
-pub const CERTIFICATE_OPERATION: &str = "/app/v3/api/certificates/operations/{operationId}";
 pub const SITE_HEALTH_CHECKS: &str = "/app/v3/api/sites/{siteId}/health_checks";
